--- a/landing.css
+++ b/landing.css
@@ -1,6 +1,20 @@
-body {
+/* body {
     background-color: black;
     margin-bottom: 10px;
     /* bottom = footer height */
-    padding: 5px;
+    /* padding: 5px;
+} */ 
+
+
+body,
+canvas {
+    position:absolute;
+    z-index: -1;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: black;
+  
+  
 }
