--- a/profile/profile.css
+++ b/profile/profile.css
@@ -2,11 +2,13 @@ body{
     background-color: rgb(18, 18, 18);
   }
 
-#page-container {
-    position: relative;
-    min-height: 100vh;
-    background-color: #f8f9fa;
-  }
+  #page-container     
+    {position: relative;
+      min-height: 100vh;
+      background-image: url("../images/hk.jpg");
+      background-color: #f8f9fa;
+     };
+  
   
   #content-wrap {
     padding-bottom: 2.5rem;    /* Footer height */
@@ -18,3 +20,25 @@ body{
     width: 100%;
     height: 2.5rem;            /* Footer height */
   }
+
+  #addPost{
+    background-color: #f7abd6;
+    border-style: solid;
+    border-width: 5px;
+    border-color: rgb(255, 242, 0);
+  }
+
+  #addThePost{
+    background-color: #f8f9fa;
+    border-color: rgb(255, 242, 0);
+    color: #000000;
+  
+  }
+
+  #bio{
+    background-color: #f8f9fa;
+    border-color: rgb(255, 242, 0);
+    color: #000000;
+  
+  }
+
