--- a/postspage/post.css
+++ b/postspage/post.css
@@ -5,7 +5,7 @@ body{
 #page-container {
     position: relative;
     min-height: 100vh;
-    background-color: #f8f9fa;
+    background-color: #909090;
   }
   
   #content-wrap {
